fix spacing around search on mobile

--- a/frontend/style/components/_components.logo.scss
+++ b/frontend/style/components/_components.logo.scss
@@ -1,6 +1,8 @@
 .c-logo {
+  width: 50px;
   max-width: 80px;
   @include mq($from: tablet) {
+    width: auto;
     margin-bottom: $spacing-large;
     max-width: 250px;
   }
